samples/_failures_safe/1761198693_d89f8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc268063.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_cc268063.c:173:5: error: expected expression at end of input
  173 |     if (
      |     ^~
./samples/SAFE/__tmp_cc268063.c:173:5: error: expected declaration or statement at end of input
